// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MySnackBarContent /> if render 1`] = `
<DocumentFragment>
  <div
    aria-describedby="client-snackbar"
    class="MuiPaper-root MuiSnackbarContent-root snackBarContent-success-10 MuiPaper-elevation6"
    horizontal="center"
    role="alert"
    vertical="top"
  >
    <div
      class="MuiSnackbarContent-message"
    >
      <span
        class="snackBarContent-message-16"
        id="client-snackbar"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root snackBarContent-icon-14 snackBarContent-iconVariant-15"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <span>
          msg
        </span>
      </span>
    </div>
    <div
      class="MuiSnackbarContent-action"
    />
  </div>
</DocumentFragment>
`;

exports[`<MySnackBarContent /> if render without action 1`] = `
<DocumentFragment>
  <div
    aria-describedby="client-snackbar"
    class="MuiPaper-root MuiSnackbarContent-root MuiPaper-elevation6"
    horizontal="center"
    role="alert"
    vertical="top"
  >
    <div
      class="MuiSnackbarContent-message"
    >
      <span
        class="snackBarContent-message-63"
        id="client-snackbar"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root snackBarContent-icon-61 snackBarContent-iconVariant-62"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        <span>
          msg
        </span>
      </span>
    </div>
    <div
      class="MuiSnackbarContent-action"
    >
      <button
        aria-label="Close"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
        data-testid="snackbar-icon-button-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root snackBarContent-icon-61"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SnackBar /> if render 1`] = `<DocumentFragment />`;
